# pe-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  PE_CoPilot_System_Guide.docx  PLAN.md  README.md  TEST_CARD.md  pyproject.toml  ruff-fixes.patch
.github/workflows/: deploy.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/models/: __init__.py  calculation_rule.py  company.py  dashboard.py  fund.py  llm_responses.py  metric_schema.py  task.py  update.py
app/routers/: __init__.py  companies.py  dashboard.py  digest.py  export.py  files.py  ingest.py  process.py  tasks.py
app/services/: __init__.py  calculator.py  email_sender.py  excel_parser.py  firestore.py  health_scorer.py  llm.py  normaliser.py  pdf_parser.py  pubsub.py  storage.py  validators.py
app/static/: company-detail.html  dashboard.html  upload.html
docs/: .~lock.PE_CoPilot_System_Guide.pdf#  CONTINUATION_BRIEF.md  GCP_INTEGRATION.md  SESSION_WORK.md  SETUP.md  USAGE.md  lu4521j5ugn.tmp
scripts/: check_github_setup.sh  clear_updates.py  seed_data.py
testdata/: BrightPath_Education_Jan2026.csv  NorthStar_Logistics_Feb2026.xlsx  NorthStar_Logistics_Jan2026.xlsx
tests/: conftest.py  test_calculator.py  test_company_detail.py  test_csv_normalisation.py  test_csv_parser.py  test_dedup.py  test_email_sender.py  test_excel_parser.py  test_files_router.py  test_health.py  test_health_integration.py  test_health_scorer.py  test_ingest_transaction.py  test_model_tiering.py  test_pdf_normalisation.py  test_pdf_parser.py  test_pubsub.py  test_staleness.py  test_storage.py  test_validators.py  test_variance.py
